# openenv-workflow-agent

./: Dockerfile  README.md  app_server.py  inference.py  normaltest.py  openenv.yaml  pyproject.toml  requirements.txt
app/: actions.py  env.py  observation.py  reward.py  state.py  transition.py
baseline/: policy.py  run_baseline.py
graders/: base.py  easy_grader.py  hard_grader.py  medium_grader.py
scripts/: validate_env.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
tests/: test_env.py  test_graders.py  test_info_cost.py
